@@ -3,748 +3,559 @@ package keywords;
 import constants.ConfigData;
 import helpers.LogUtils;
 import io.qameta.allure.Step;
-import org.openqa.selenium.*;
+import org.openqa.selenium.By;
+import org.openqa.selenium.Dimension;
 import org.openqa.selenium.NoSuchElementException;
+import org.openqa.selenium.Point;
+import org.openqa.selenium.WebElement;
 import org.openqa.selenium.interactions.Pause;
 import org.openqa.selenium.interactions.PointerInput;
 import org.openqa.selenium.interactions.Sequence;
+import org.openqa.selenium.support.ui.ExpectedCondition;
 import org.openqa.selenium.support.ui.ExpectedConditions;
 import org.openqa.selenium.support.ui.WebDriverWait;
 import org.testng.Assert;
 import reports.AllureManager;
 
 import java.time.Duration;
-import java.util.*;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 import static drivers.DriverManager.getDriver;
 
-public class MobileUI {
+/**
+ * High-level mobile UI keyword library.
+ * <p>
+ * Wraps common Appium / Selenium interactions with Allure {@link Step} annotations,
+ * automatic logging, and unified explicit-wait handling.
+ * </p>
+ */
+public final class MobileUI {
 
-    private static final int DEFAULT_TIMEOUT = Integer.parseInt(ConfigData.TIMEOUT_EXPLICIT_DEFAULT);
-    private static final double STEP_ACTION_TIMEOUT = Double.parseDouble(ConfigData.STEP_ACTION_TIMEOUT);
+    private static final String LOG_PREFIX = "[MobileUI] ";
+    private static final int DEFAULT_TIMEOUT = ConfigData.TIMEOUT_EXPLICIT_DEFAULT;
+    private static final double STEP_ACTION_TIMEOUT = ConfigData.STEP_ACTION_TIMEOUT;
+    private static final int DEFAULT_TAP_PAUSE_MS = 200;
+    private static final int DEFAULT_LONG_TAP_MS = 500;
+    private static final int DEFAULT_SWIPE_DURATION_MS = 200;
 
-    public static void sleep(double second) {
-        LogUtils.info("[MobileUI] Sleeping for " + second + " seconds.");
+    private MobileUI() {
+        // Utility class — prevent instantiation
+    }
+
+    // ═══════════════════════ TIMING ═══════════════════════
+
+    /**
+     * Pauses the current thread for {@code seconds}.
+     *
+     * @param seconds wait duration; values &le; 0 are ignored
+     */
+    public static void sleep(double seconds) {
+        if (seconds <= 0) return;
+        log("Sleeping for " + seconds + " seconds");
         try {
-            Thread.sleep((long) (1000 * second));
+            Thread.sleep((long) (1000 * seconds));
         } catch (InterruptedException e) {
-            throw new RuntimeException(e);
+            Thread.currentThread().interrupt();
+            throw new RuntimeException("Sleep interrupted", e);
         }
     }
 
+    // ═══════════════════════ GESTURES ═══════════════════════
+
     public static void swipe(int startX, int startY, int endX, int endY, int durationMillis) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Executing swipe from (" + startX + "," + startY + ") to (" + endX + "," + endY
-                + ") with duration " + durationMillis + "ms.");
-        PointerInput finger = new PointerInput(PointerInput.Kind.TOUCH, "finger");
-        Sequence swipe = new Sequence(finger, 1);
-        swipe.addAction(finger.createPointerMove(Duration.ofMillis(0), PointerInput.Origin.viewport(), startX, startY));
-        swipe.addAction(finger.createPointerDown(0));
-        swipe.addAction(finger.createPointerMove(Duration.ofMillis(durationMillis), PointerInput.Origin.viewport(),
-                endX, endY));
-        swipe.addAction(finger.createPointerUp(0));
-        getDriver().perform(Collections.singletonList(swipe));
-    }
-
-    public static void swipeLeft() {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Executing swipeLeft.");
-        Dimension size = getDriver().manage().window().getSize();
-        int startX = (int) (size.width * 0.8);
-        int startY = (int) (size.height * 0.3);
-        int endX = (int) (size.width * 0.2);
-        int endY = startY;
-        int duration = 200;
-        swipe(startX, startY, endX, endY, duration);
-    }
-
-    public static void swipeRight() {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Executing swipeRight.");
-        Dimension size = getDriver().manage().window().getSize();
-        int startX = (int) (size.width * 0.2);
-        int startY = (int) (size.height * 0.3);
-        int endX = (int) (size.width * 0.8);
-        int endY = startY;
-        int duration = 200;
-        swipe(startX, startY, endX, endY, duration);
-    }
-
-    private static Point getCenterOfElement(Point location, Dimension size) {
-        // No log needed for private helper, logging happens in the calling public
-        // method
-        return new Point(location.getX() + size.getWidth() / 2, location.getY() + size.getHeight() / 2);
-    }
-
-    public static void tap(WebElement element) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Executing tap on element: " + element);
-        Point location = element.getLocation();
-        Dimension size = element.getSize();
-        Point centerOfElement = getCenterOfElement(location, size);
+        stepDelay();
+        log("Swipe (" + startX + "," + startY + ") -> (" + endX + "," + endY
+                + ") in " + durationMillis + "ms");
         PointerInput finger = new PointerInput(PointerInput.Kind.TOUCH, "finger");
         Sequence sequence = new Sequence(finger, 1)
-                .addAction(finger.createPointerMove(Duration.ZERO, PointerInput.Origin.viewport(), centerOfElement))
+                .addAction(finger.createPointerMove(Duration.ZERO, PointerInput.Origin.viewport(), startX, startY))
                 .addAction(finger.createPointerDown(PointerInput.MouseButton.LEFT.asArg()))
-                .addAction(new Pause(finger, Duration.ofMillis(500))) // Note: Default pause is 500ms here
+                .addAction(finger.createPointerMove(Duration.ofMillis(durationMillis),
+                        PointerInput.Origin.viewport(), endX, endY))
                 .addAction(finger.createPointerUp(PointerInput.MouseButton.LEFT.asArg()));
-
         getDriver().perform(Collections.singletonList(sequence));
     }
 
-    public static void tap(int x, int y) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Executing tap at coordinates (" + x + "," + y + ") with 200ms pause.");
-        PointerInput finger = new PointerInput(PointerInput.Kind.TOUCH, "finger");
-        Sequence tap = new Sequence(finger, 1);
-        tap.addAction(finger.createPointerMove(Duration.ZERO, PointerInput.Origin.viewport(), x, y));
-        tap.addAction(finger.createPointerDown(PointerInput.MouseButton.LEFT.asArg()));
-        tap.addAction(new Pause(finger, Duration.ofMillis(200))); // Chạm nhẹ nhanh
-        tap.addAction(finger.createPointerUp(PointerInput.MouseButton.LEFT.asArg()));
-        getDriver().perform(List.of(tap));
+    public static void swipeLeft() {
+        Dimension size = getDriver().manage().window().getSize();
+        int y = (int) (size.height * 0.3);
+        swipe((int) (size.width * 0.8), y, (int) (size.width * 0.2), y, DEFAULT_SWIPE_DURATION_MS);
     }
 
-    public static void tap(int x, int y, int milliSecondDuration) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Executing tap at coordinates (" + x + "," + y + ") with pause " + milliSecondDuration
-                + "ms.");
-        PointerInput finger = new PointerInput(PointerInput.Kind.TOUCH, "finger");
-        Sequence tap = new Sequence(finger, 1);
-        tap.addAction(finger.createPointerMove(Duration.ZERO, PointerInput.Origin.viewport(), x, y));
-        tap.addAction(finger.createPointerDown(PointerInput.MouseButton.LEFT.asArg()));
-        tap.addAction(new Pause(finger, Duration.ofMillis(milliSecondDuration))); // Chạm vào với thời gian chỉ định
-        tap.addAction(finger.createPointerUp(PointerInput.MouseButton.LEFT.asArg()));
-        getDriver().perform(List.of(tap));
+    public static void swipeRight() {
+        Dimension size = getDriver().manage().window().getSize();
+        int y = (int) (size.height * 0.3);
+        swipe((int) (size.width * 0.2), y, (int) (size.width * 0.8), y, DEFAULT_SWIPE_DURATION_MS);
+    }
+
+    public static void scroll(int startX, int startY, int endX, int endY, int durationMillis) {
+        swipe(startX, startY, endX, endY, durationMillis);
+    }
+
+    /** Android-specific scroll gesture using mobile: scrollGesture. */
+    public static void scrollGestureCommand() {
+        stepDelay();
+        Map<String, Object> params = new HashMap<>();
+        params.put("left", 670);
+        params.put("top", 500);
+        params.put("width", 200);
+        params.put("height", 2000);
+        params.put("direction", "down");
+        params.put("percent", 1);
+        log("scrollGesture: " + params);
+        getDriver().executeScript("mobile: scrollGesture", params);
+    }
+
+    public static void tap(WebElement element) {
+        stepDelay();
+        log("Tap on element: " + element);
+        Point center = centerOf(element);
+        performTap(center.getX(), center.getY(), DEFAULT_LONG_TAP_MS);
+    }
+
+    public static void tap(int x, int y) {
+        tap(x, y, DEFAULT_TAP_PAUSE_MS);
+    }
+
+    public static void tap(int x, int y, int durationMillis) {
+        stepDelay();
+        log("Tap at (" + x + "," + y + ") for " + durationMillis + "ms");
+        performTap(x, y, durationMillis);
     }
 
     public static void zoom(WebElement element, double scale) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Executing zoom on element: " + element + " with approximate scale factor: " + scale
-                + " (Note: Implementation may need review for accurate scaling)");
-        int centerX = element.getLocation().getX() + element.getSize().getWidth() / 2;
-        int centerY = element.getLocation().getY() + element.getSize().getHeight() / 2;
-        int distance = 100; // Khoảng cách giữa hai ngón tay
+        stepDelay();
+        log("Zoom element=" + element + " scale=" + scale);
+        Point center = centerOf(element);
+        int initialDistance = 100;
+        int targetDistance = (int) (initialDistance * scale);
+        int steps = 10;
+        int moveDuration = 50;
 
         PointerInput finger1 = new PointerInput(PointerInput.Kind.TOUCH, "finger1");
         PointerInput finger2 = new PointerInput(PointerInput.Kind.TOUCH, "finger2");
 
-        Sequence zoom = new Sequence(finger1, 1);
-        zoom.addAction(finger1.createPointerMove(Duration.ofMillis(0), PointerInput.Origin.viewport(),
-                centerX - distance, centerY));
-        zoom.addAction(finger1.createPointerDown(0));
-
-        Sequence zoom2 = new Sequence(finger2, 1);
-        zoom2.addAction(finger2.createPointerMove(Duration.ofMillis(0), PointerInput.Origin.viewport(),
-                centerX + distance, centerY));
-        zoom2.addAction(finger2.createPointerDown(0));
-
-        // Simplified movement - Actual scaling might need more complex radial movement
-        // logic
-        int moveDuration = 50;
-        int steps = 10;
-        int startDist1X = centerX - distance;
-        int startDist2X = centerX + distance;
-        int endDist1X, endDist2X;
-
-        if (scale > 1) { // Phóng to - Move fingers further apart
-            LogUtils.info("[MobileUI] Zooming In");
-            endDist1X = centerX - (int) (distance * scale); // Example: move further left
-            endDist2X = centerX + (int) (distance * scale); // Example: move further right
-        } else { // Thu nhỏ - Move fingers closer
-            LogUtils.info("[MobileUI] Zooming Out");
-            endDist1X = centerX - (int) (distance * scale); // Example: move closer to center
-            endDist2X = centerX + (int) (distance * scale); // Example: move closer to center
-        }
+        Sequence s1 = new Sequence(finger1, 1)
+                .addAction(finger1.createPointerMove(Duration.ZERO, PointerInput.Origin.viewport(),
+                        center.getX() - initialDistance, center.getY()))
+                .addAction(finger1.createPointerDown(0));
+        Sequence s2 = new Sequence(finger2, 1)
+                .addAction(finger2.createPointerMove(Duration.ZERO, PointerInput.Origin.viewport(),
+                        center.getX() + initialDistance, center.getY()))
+                .addAction(finger2.createPointerDown(0));
 
         for (int i = 1; i <= steps; i++) {
-            int currentX1 = startDist1X + (endDist1X - startDist1X) * i / steps;
-            int currentX2 = startDist2X + (endDist2X - startDist2X) * i / steps;
-            zoom.addAction(finger1.createPointerMove(Duration.ofMillis(moveDuration), PointerInput.Origin.viewport(),
-                    currentX1, centerY));
-            zoom2.addAction(finger2.createPointerMove(Duration.ofMillis(moveDuration), PointerInput.Origin.viewport(),
-                    currentX2, centerY));
+            int x1 = center.getX() - initialDistance
+                    + (initialDistance - targetDistance) * i / steps;
+            int x2 = center.getX() + initialDistance
+                    + (targetDistance - initialDistance) * i / steps;
+            s1.addAction(finger1.createPointerMove(Duration.ofMillis(moveDuration),
+                    PointerInput.Origin.viewport(), x1, center.getY()));
+            s2.addAction(finger2.createPointerMove(Duration.ofMillis(moveDuration),
+                    PointerInput.Origin.viewport(), x2, center.getY()));
         }
-
-        zoom.addAction(finger1.createPointerUp(0));
-        zoom2.addAction(finger2.createPointerUp(0));
-
-        getDriver().perform(Arrays.asList(zoom, zoom2));
+        s1.addAction(finger1.createPointerUp(0));
+        s2.addAction(finger2.createPointerUp(0));
+        getDriver().perform(List.of(s1, s2));
     }
 
-    public static void scroll(int startX, int startY, int endX, int endY, int durationMillis) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Executing scroll from (" + startX + "," + startY + ") to (" + endX + "," + endY
-                + ") with duration " + durationMillis + "ms.");
-        PointerInput finger = new PointerInput(PointerInput.Kind.TOUCH, "finger");
-        Sequence swipe = new Sequence(finger, 1);
-        swipe.addAction(finger.createPointerMove(Duration.ofMillis(0), PointerInput.Origin.viewport(), startX, startY));
-        swipe.addAction(finger.createPointerDown(0));
-        swipe.addAction(finger.createPointerMove(Duration.ofMillis(durationMillis), PointerInput.Origin.viewport(),
-                endX, endY));
-        swipe.addAction(finger.createPointerUp(0));
-        getDriver().perform(Collections.singletonList(swipe));
-    }
-
-    public static void scrollGestureCommand() {
-        sleep(STEP_ACTION_TIMEOUT);
-        // Scroll gesture cho Android
-        Map<String, Object> scrollParams = new HashMap<>();
-        scrollParams.put("left", 670);
-        scrollParams.put("top", 500);
-        scrollParams.put("width", 200);
-        scrollParams.put("height", 2000);
-        scrollParams.put("direction", "down");
-        scrollParams.put("percent", 1);
-
-        LogUtils.info("[MobileUI] Executing scrollGesture command with params: " + scrollParams);
-        // Thực hiện scroll gesture
-        getDriver().executeScript("mobile: scrollGesture", scrollParams);
-    }
-
-    @Step("Click element {0} within {1}s")
-    public static void clickElement(By locator, int second) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Clicking element located by: " + locator + " within " + second + "s.");
-        waitForElementToBeClickable(locator, second).click();
-    }
+    // ═══════════════════════ CLICK ═══════════════════════
 
     @Step("Click element {0}")
     public static void clickElement(By locator) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Clicking element located by: " + locator + " within default timeout ("
-                + DEFAULT_TIMEOUT + "s).");
-        waitForElementToBeClickable(locator).click();
+        clickElement(locator, DEFAULT_TIMEOUT);
     }
 
     @Step("Click element {0} within {1}s")
-    public static void clickElement(WebElement element, int second) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Clicking element: " + element + " within " + second + "s.");
-        waitForElementToBeClickable(element, second).click();
+    public static void clickElement(By locator, int timeoutSeconds) {
+        stepDelay();
+        log("Click locator=" + locator + " (timeout=" + timeoutSeconds + "s)");
+        waitForElementToBeClickable(locator, timeoutSeconds).click();
     }
 
-    @Step("Click element {0}")
+    @Step("Click element")
     public static void clickElement(WebElement element) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info(
-                "[MobileUI] Clicking element: " + element + " within default timeout (" + DEFAULT_TIMEOUT + "s).");
-        waitForElementToBeClickable(element).click();
+        clickElement(element, DEFAULT_TIMEOUT);
     }
+
+    @Step("Click element within {1}s")
+    public static void clickElement(WebElement element, int timeoutSeconds) {
+        stepDelay();
+        log("Click element=" + element + " (timeout=" + timeoutSeconds + "s)");
+        waitForElementToBeClickable(element, timeoutSeconds).click();
+    }
+
+    // ═══════════════════════ TEXT INPUT ═══════════════════════
 
     @Step("Set text '{1}' on element {0}")
     public static void setText(By locator, String text) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info(
-                "[MobileUI] Setting text '" + text + "' on element located by: " + locator + " with default timeout.");
-        WebElement element = waitForElementVisible(locator);
-        element.click(); // Often needed before clear/sendKeys
-        element.clear();
-        element.sendKeys(text);
-        LogUtils.info("[MobileUI] Set text completed for locator: " + locator);
+        setText(locator, text, DEFAULT_TIMEOUT);
     }
 
     @Step("Set text '{1}' on element {0} within {2}s")
-    public static void setText(By locator, String text, int second) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Setting text '" + text + "' on element located by: " + locator + " with timeout "
-                + second + "s.");
-        WebElement element = waitForElementVisible(locator, second);
-        element.click();
-        element.clear();
-        element.sendKeys(text);
-        LogUtils.info("[MobileUI] Set text completed for locator: " + locator);
+    public static void setText(By locator, String text, int timeoutSeconds) {
+        stepDelay();
+        log("Set text='" + text + "' locator=" + locator);
+        WebElement el = waitForElementVisible(locator, timeoutSeconds);
+        el.click();
+        el.clear();
+        el.sendKeys(text);
     }
 
-    @Step("Set text '{1}' on element {0}")
+    @Step("Set text '{1}' on element")
     public static void setText(WebElement element, String text) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Setting text '" + text + "' on element: " + element + " with default timeout.");
-        WebElement elm = waitForElementVisible(element);
-        elm.click();
-        elm.clear();
-        elm.sendKeys(text);
-        LogUtils.info("[MobileUI] Set text completed for element: " + element);
-
+        setText(element, text, DEFAULT_TIMEOUT);
     }
 
-    @Step("Set text '{1}' on element {0} within {2}s")
-    public static void setText(WebElement element, String text, int second) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info(
-                "[MobileUI] Setting text '" + text + "' on element: " + element + " with timeout " + second + "s.");
-        WebElement elm = waitForElementVisible(element, second);
-        elm.click();
-        elm.clear();
-        elm.sendKeys(text);
-        LogUtils.info("[MobileUI] Set text completed for element: " + element);
+    @Step("Set text '{1}' on element within {2}s")
+    public static void setText(WebElement element, String text, int timeoutSeconds) {
+        stepDelay();
+        log("Set text='" + text + "' element=" + element);
+        WebElement el = waitForElementVisible(element, timeoutSeconds);
+        el.click();
+        el.clear();
+        el.sendKeys(text);
     }
 
     @Step("Clear text on element {0}")
     public static void clearText(By locator) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Clearing text on element located by: " + locator + " with default timeout.");
-        WebElement element = waitForElementVisible(locator);
-        element.click();
-        element.clear();
-        LogUtils.info("[MobileUI] Clear text completed for locator: " + locator);
+        clearText(locator, DEFAULT_TIMEOUT);
     }
 
     @Step("Clear text on element {0} within {1}s")
-    public static void clearText(By locator, int second) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Clearing text on element located by: " + locator + " with timeout " + second + "s.");
-        WebElement element = waitForElementVisible(locator, second);
-        element.click();
-        element.clear();
-        LogUtils.info("[MobileUI] Clear text completed for locator: " + locator);
+    public static void clearText(By locator, int timeoutSeconds) {
+        stepDelay();
+        log("Clear text locator=" + locator);
+        WebElement el = waitForElementVisible(locator, timeoutSeconds);
+        el.click();
+        el.clear();
     }
 
-    @Step("Clear text on element {0}")
+    @Step("Clear text on element")
     public static void clearText(WebElement element) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Clearing text on element: " + element + " with default timeout.");
-        WebElement elm = waitForElementVisible(element);
-        elm.click();
-        elm.clear();
-        LogUtils.info("[MobileUI] Clear text completed for element: " + element);
+        clearText(element, DEFAULT_TIMEOUT);
     }
 
-    @Step("Clear text on element {0} within {1}s")
-    public static void clearText(WebElement element, int second) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Clearing text on element: " + element + " with timeout " + second + "s.");
-        WebElement elm = waitForElementVisible(element, second);
-        elm.click();
-        elm.clear();
-        LogUtils.info("[MobileUI] Clear text completed for element: " + element);
+    @Step("Clear text on element within {1}s")
+    public static void clearText(WebElement element, int timeoutSeconds) {
+        stepDelay();
+        log("Clear text element=" + element);
+        WebElement el = waitForElementVisible(element, timeoutSeconds);
+        el.click();
+        el.clear();
     }
+
+    // ═══════════════════════ READ ═══════════════════════
 
     @Step("Get text from element {0}")
     public static String getElementText(By locator) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Getting text from element located by: " + locator + " with default timeout.");
-        WebElement element = waitForElementVisible(locator);
-        String text = element.getText();
-        LogUtils.info("[MobileUI] Retrieved text: '" + text + "'");
-        AllureManager.saveTextLog("➡\uFE0F TEXT: " + text);
-        return text;
+        return getElementText(locator, DEFAULT_TIMEOUT);
     }
 
     @Step("Get text from element {0} within {1}s")
-    public static String getElementText(By locator, int second) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Getting text from element located by: " + locator + " with timeout " + second + "s.");
-        WebElement element = waitForElementVisible(locator, second);
-        String text = element.getText();
-        LogUtils.info("[MobileUI] Retrieved text: '" + text + "'");
+    public static String getElementText(By locator, int timeoutSeconds) {
+        stepDelay();
+        String text = waitForElementVisible(locator, timeoutSeconds).getText();
+        log("Text from " + locator + " = '" + text + "'");
         AllureManager.saveTextLog("➡\uFE0F TEXT: " + text);
         return text;
     }
 
     public static String getElementText(WebElement element) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Getting text from element: " + element + " with default timeout.");
-        WebElement elm = waitForElementVisible(element);
-        String text = elm.getText();
-        LogUtils.info("[MobileUI] Retrieved text: '" + text + "'");
-        return text;
+        return getElementText(element, DEFAULT_TIMEOUT);
     }
 
-    public static String getElementText(WebElement element, int second) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Getting text from element: " + element + " with timeout " + second + "s.");
-        WebElement elm = waitForElementVisible(element, second);
-        String text = elm.getText();
-        LogUtils.info("[MobileUI] Retrieved text: '" + text + "'");
+    public static String getElementText(WebElement element, int timeoutSeconds) {
+        stepDelay();
+        String text = waitForElementVisible(element, timeoutSeconds).getText();
+        log("Text = '" + text + "'");
         return text;
     }
 
     public static String getElementAttribute(By locator, String attribute) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Getting attribute '" + attribute + "' from element located by: " + locator
-                + " with default timeout.");
-        WebElement element = waitForElementVisible(locator);
-        String value = element.getAttribute(attribute);
-        LogUtils.info("[MobileUI] Retrieved attribute value: '" + value + "'");
-        return value;
+        return getElementAttribute(locator, attribute, DEFAULT_TIMEOUT);
     }
 
-    public static String getElementAttribute(By locator, String attribute, int second) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Getting attribute '" + attribute + "' from element located by: " + locator
-                + " with timeout " + second + "s.");
-        WebElement element = waitForElementVisible(locator, second);
-        String value = element.getAttribute(attribute);
-        LogUtils.info("[MobileUI] Retrieved attribute value: '" + value + "'");
+    public static String getElementAttribute(By locator, String attribute, int timeoutSeconds) {
+        stepDelay();
+        String value = waitForElementVisible(locator, timeoutSeconds).getAttribute(attribute);
+        log("Attribute '" + attribute + "' on " + locator + " = '" + value + "'");
         return value;
     }
 
     public static String getElementAttribute(WebElement element, String attribute) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info(
-                "[MobileUI] Getting attribute '" + attribute + "' from element: " + element + " with default timeout.");
-        WebElement elm = waitForElementVisible(element);
-        String value = elm.getAttribute(attribute);
-        LogUtils.info("[MobileUI] Retrieved attribute value: '" + value + "'");
+        return getElementAttribute(element, attribute, DEFAULT_TIMEOUT);
+    }
+
+    public static String getElementAttribute(WebElement element, String attribute, int timeoutSeconds) {
+        stepDelay();
+        String value = waitForElementVisible(element, timeoutSeconds).getAttribute(attribute);
+        log("Attribute '" + attribute + "' = '" + value + "'");
         return value;
     }
 
-    public static String getElementAttribute(WebElement element, String attribute, int second) {
-        sleep(STEP_ACTION_TIMEOUT);
-        LogUtils.info("[MobileUI] Getting attribute '" + attribute + "' from element: " + element + " with timeout "
-                + second + "s.");
-        WebElement elm = waitForElementVisible(element, second);
-        String value = elm.getAttribute(attribute);
-        LogUtils.info("[MobileUI] Retrieved attribute value: '" + value + "'");
-        return value;
-    }
+    // ═══════════════════════ STATE CHECKS ═══════════════════════
 
     public static boolean isElementPresentAndDisplayed(WebElement element) {
-        LogUtils.info("[MobileUI] Checking if element is present and displayed: " + element);
-        boolean result;
         try {
-            result = element != null && element.isDisplayed();
-            LogUtils.info("[MobileUI] Element present and displayed check result: " + result);
-            return result;
+            return element != null && element.isDisplayed();
         } catch (NoSuchElementException e) {
-            LogUtils.info(
-                    "[MobileUI] Element not found during presence/display check: " + element + " - " + e.getMessage());
             return false;
         } catch (Exception e) {
-            LogUtils.info("[MobileUI] An error occurred checking presence/display for element: " + element + " - "
-                    + e.getMessage());
+            log("isElementPresentAndDisplayed error: " + e.getMessage());
             return false;
         }
     }
 
     public static boolean isElementPresentAndDisplayed(By locator) {
-        LogUtils.info("[MobileUI] Checking if element is present and displayed: " + locator);
-        boolean result;
         try {
-            WebElement element = getDriver().findElement(locator); // Find first, then check display
-            result = element.isDisplayed();
-            LogUtils.info(
-                    "[MobileUI] Element present and displayed check result: " + result + " for locator: " + locator);
-            return result;
+            return getDriver().findElement(locator).isDisplayed();
         } catch (NoSuchElementException e) {
-            LogUtils.info(
-                    "[MobileUI] Element not found during presence/display check: " + locator + " - " + e.getMessage());
             return false;
         } catch (Exception e) {
-            LogUtils.info("[MobileUI] An error occurred checking presence/display for locator: " + locator + " - "
-                    + e.getMessage());
+            log("isElementPresentAndDisplayed error: " + e.getMessage());
             return false;
         }
     }
 
     public static boolean isElementEnabled(WebElement element) {
-        LogUtils.info("[MobileUI] Checking if element is enabled: " + element);
-        boolean result;
         try {
-            result = element != null && element.isEnabled();
-            LogUtils.info("[MobileUI] Element enabled check result: " + result);
-            return result;
+            return element != null && element.isEnabled();
         } catch (Exception e) {
-            LogUtils.info("[MobileUI] An error occurred checking enabled status for element: " + element + " - "
-                    + e.getMessage());
             return false;
         }
     }
 
     public static boolean isElementEnabled(By locator) {
-        LogUtils.info("[MobileUI] Checking if element is enabled: " + locator);
-        boolean result;
         try {
-            WebElement element = waitForElementVisible(locator); // Ensure it's visible before checking enabled
-            result = element != null && element.isEnabled();
-            LogUtils.info("[MobileUI] Element enabled check result: " + result + " for locator: " + locator);
-            return result;
+            return waitForElementVisible(locator).isEnabled();
         } catch (Exception e) {
-            LogUtils.info("[MobileUI] An error occurred checking enabled status for locator: " + locator + " - "
-                    + e.getMessage());
             return false;
         }
     }
 
     public static boolean isElementSelected(WebElement element) {
-        LogUtils.info("[MobileUI] Checking if element is selected: " + element);
-        boolean result;
         try {
-            result = element != null && element.isSelected();
-            LogUtils.info("[MobileUI] Element selected check result: " + result);
-            return result;
+            return element != null && element.isSelected();
         } catch (Exception e) {
-            LogUtils.info("[MobileUI] An error occurred checking selected status for element: " + element + " - "
-                    + e.getMessage());
             return false;
         }
     }
 
     public static boolean isElementSelected(By locator) {
-        LogUtils.info("[MobileUI] Checking if element is selected: " + locator);
-        boolean result;
         try {
-            WebElement element = waitForElementVisible(locator); // Ensure it's visible before checking selected
-            result = element != null && element.isSelected();
-            LogUtils.info("[MobileUI] Element selected check result: " + result + " for locator: " + locator);
-            return result;
+            return waitForElementVisible(locator).isSelected();
         } catch (Exception e) {
-            LogUtils.info("[MobileUI] An error occurred checking selected status for locator: " + locator + " - "
-                    + e.getMessage());
             return false;
         }
     }
 
-    // Các hàm verify (sử dụng Assert và gọi lại các hàm is)
+    // ═══════════════════════ VERIFICATIONS ═══════════════════════
 
     public static void verifyElementPresentAndDisplayed(WebElement element, String message) {
-        LogUtils.info("[MobileUI] Verifying element is present and displayed: " + element + ". Message if failed: "
-                + message);
         Assert.assertTrue(isElementPresentAndDisplayed(element), message);
     }
 
     public static void verifyElementPresentAndDisplayed(By locator, String message) {
-        LogUtils.info("[MobileUI] Verifying element is present and displayed: " + locator + ". Message if failed: "
-                + message);
         Assert.assertTrue(isElementPresentAndDisplayed(locator), message);
     }
 
     public static void verifyElementEnabled(WebElement element, String message) {
-        LogUtils.info("[MobileUI] Verifying element is enabled: " + element + ". Message if failed: " + message);
         Assert.assertTrue(isElementEnabled(element), message);
     }
 
     public static void verifyElementEnabled(By locator, String message) {
-        LogUtils.info("[MobileUI] Verifying element is enabled: " + locator + ". Message if failed: " + message);
         Assert.assertTrue(isElementEnabled(locator), message);
     }
 
     public static void verifyElementSelected(WebElement element, String message) {
-        LogUtils.info("[MobileUI] Verifying element is selected: " + element + ". Message if failed: " + message);
         Assert.assertTrue(isElementSelected(element), message);
     }
 
     public static void verifyElementSelected(By locator, String message) {
-        LogUtils.info("[MobileUI] Verifying element is selected: " + locator + ". Message if failed: " + message);
         Assert.assertTrue(isElementSelected(locator), message);
     }
 
-    public static void verifyElementText(WebElement element, String expectedText, String message) {
-        LogUtils.info("[MobileUI] Verifying text of element: " + element + " equals '" + expectedText
-                + "'. Message if failed: " + message);
-        Assert.assertEquals(getElementText(element), expectedText, message);
+    public static void verifyElementText(WebElement element, String expected, String message) {
+        Assert.assertEquals(getElementText(element), expected, message);
     }
 
-    public static void verifyElementText(By locator, String expectedText, String message) {
-        LogUtils.info("[MobileUI] Verifying text of element: " + locator + " equals '" + expectedText
-                + "'. Message if failed: " + message);
-        Assert.assertEquals(getElementText(locator), expectedText, message);
+    public static void verifyElementText(By locator, String expected, String message) {
+        Assert.assertEquals(getElementText(locator), expected, message);
     }
 
-    public static void verifyElementAttribute(WebElement element, String attribute, String expectedValue,
-            String message) {
-        LogUtils.info("[MobileUI] Verifying attribute '" + attribute + "' of element: " + element + " equals '"
-                + expectedValue + "'. Message if failed: " + message);
-        Assert.assertEquals(getElementAttribute(element, attribute), expectedValue, message);
+    public static void verifyElementAttribute(WebElement element, String attribute,
+                                              String expected, String message) {
+        Assert.assertEquals(getElementAttribute(element, attribute), expected, message);
     }
 
-    public static void verifyElementAttribute(By locator, String attribute, String expectedValue, String message) {
-        LogUtils.info("[MobileUI] Verifying attribute '" + attribute + "' of element: " + locator + " equals '"
-                + expectedValue + "'. Message if failed: " + message);
-        Assert.assertEquals(getElementAttribute(locator, attribute), expectedValue, message);
+    public static void verifyElementAttribute(By locator, String attribute,
+                                              String expected, String message) {
+        Assert.assertEquals(getElementAttribute(locator, attribute), expected, message);
     }
 
     public static void assertTrueCondition(boolean condition, String message) {
-        LogUtils.info("[MobileUI] Asserting condition: " + condition + ". Message if failed: " + message);
         Assert.assertTrue(condition, message);
-        LogUtils.info("[MobileUI] Assertion passed for condition: " + condition);
     }
 
-    // --- Wait Methods ---
-
-    public static WebElement waitForElementToBeClickable(By locator, int timeout) {
-        LogUtils.info("[MobileUI] Waiting up to " + timeout + "s for element to be clickable: " + locator);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(timeout));
-        return wait.until(ExpectedConditions.elementToBeClickable(locator));
-    }
+    // ═══════════════════════ EXPLICIT WAITS ═══════════════════════
 
     public static WebElement waitForElementToBeClickable(By locator) {
-        LogUtils.info(
-                "[MobileUI] Waiting up to " + DEFAULT_TIMEOUT + "s (default) for element to be clickable: " + locator);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(DEFAULT_TIMEOUT));
-        return wait.until(ExpectedConditions.elementToBeClickable(locator));
+        return waitForElementToBeClickable(locator, DEFAULT_TIMEOUT);
     }
 
-    public static WebElement waitForElementToBeClickable(WebElement element, int timeout) {
-        LogUtils.info("[MobileUI] Waiting up to " + timeout + "s for element to be clickable: " + element);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(timeout));
-        return wait.until(ExpectedConditions.elementToBeClickable(element));
+    public static WebElement waitForElementToBeClickable(By locator, int timeoutSeconds) {
+        return waitFor(ExpectedConditions.elementToBeClickable(locator), timeoutSeconds,
+                "clickable: " + locator);
     }
 
     public static WebElement waitForElementToBeClickable(WebElement element) {
-        LogUtils.info(
-                "[MobileUI] Waiting up to " + DEFAULT_TIMEOUT + "s (default) for element to be clickable: " + element);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(DEFAULT_TIMEOUT));
-        return wait.until(ExpectedConditions.elementToBeClickable(element));
+        return waitForElementToBeClickable(element, DEFAULT_TIMEOUT);
     }
 
-    public static WebElement waitForElementVisible(By locator, int timeout) {
-        LogUtils.info("[MobileUI] Waiting up to " + timeout + "s for element to be visible: " + locator);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(timeout));
-        return wait.until(ExpectedConditions.visibilityOfElementLocated(locator));
+    public static WebElement waitForElementToBeClickable(WebElement element, int timeoutSeconds) {
+        return waitFor(ExpectedConditions.elementToBeClickable(element), timeoutSeconds,
+                "clickable: " + element);
     }
 
     public static WebElement waitForElementVisible(By locator) {
-        LogUtils.info(
-                "[MobileUI] Waiting up to " + DEFAULT_TIMEOUT + "s (default) for element to be visible: " + locator);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(DEFAULT_TIMEOUT));
-        return wait.until(ExpectedConditions.visibilityOfElementLocated(locator));
+        return waitForElementVisible(locator, DEFAULT_TIMEOUT);
     }
 
-    public static WebElement waitForElementVisible(WebElement element, int timeout) {
-        LogUtils.info("[MobileUI] Waiting up to " + timeout + "s for element to be visible: " + element);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(timeout));
-        return wait.until(ExpectedConditions.visibilityOf(element));
+    public static WebElement waitForElementVisible(By locator, int timeoutSeconds) {
+        return waitFor(ExpectedConditions.visibilityOfElementLocated(locator), timeoutSeconds,
+                "visible: " + locator);
     }
 
     public static WebElement waitForElementVisible(WebElement element) {
-        LogUtils.info(
-                "[MobileUI] Waiting up to " + DEFAULT_TIMEOUT + "s (default) for element to be visible: " + element);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(DEFAULT_TIMEOUT));
-        return wait.until(ExpectedConditions.visibilityOf(element));
+        return waitForElementVisible(element, DEFAULT_TIMEOUT);
     }
 
-    public static boolean waitForElementInvisible(By locator, int timeout) {
-        LogUtils.info("[MobileUI] Waiting up to " + timeout + "s for element to be invisible: " + locator);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(timeout));
-        return wait.until(ExpectedConditions.invisibilityOfElementLocated(locator));
+    public static WebElement waitForElementVisible(WebElement element, int timeoutSeconds) {
+        return waitFor(ExpectedConditions.visibilityOf(element), timeoutSeconds,
+                "visible: " + element);
     }
 
     public static boolean waitForElementInvisible(By locator) {
-        LogUtils.info(
-                "[MobileUI] Waiting up to " + DEFAULT_TIMEOUT + "s (default) for element to be invisible: " + locator);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(DEFAULT_TIMEOUT));
-        return wait.until(ExpectedConditions.invisibilityOfElementLocated(locator));
+        return waitForElementInvisible(locator, DEFAULT_TIMEOUT);
     }
 
-    public static boolean waitForElementInvisible(WebElement element, int timeout) {
-        LogUtils.info("[MobileUI] Waiting up to " + timeout + "s for element to be invisible: " + element);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(timeout));
-        return wait.until(ExpectedConditions.invisibilityOf(element));
+    public static boolean waitForElementInvisible(By locator, int timeoutSeconds) {
+        return waitFor(ExpectedConditions.invisibilityOfElementLocated(locator), timeoutSeconds,
+                "invisible: " + locator);
     }
 
     public static boolean waitForElementInvisible(WebElement element) {
-        LogUtils.info(
-                "[MobileUI] Waiting up to " + DEFAULT_TIMEOUT + "s (default) for element to be invisible: " + element);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(DEFAULT_TIMEOUT));
-        return wait.until(ExpectedConditions.invisibilityOf(element));
+        return waitForElementInvisible(element, DEFAULT_TIMEOUT);
     }
 
-    public static WebElement waitForElementPresent(By locator, int timeout) {
-        LogUtils.info("[MobileUI] Waiting up to " + timeout + "s for element to be present in DOM: " + locator);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(timeout));
-        return wait.until(ExpectedConditions.presenceOfElementLocated(locator));
+    public static boolean waitForElementInvisible(WebElement element, int timeoutSeconds) {
+        return waitFor(ExpectedConditions.invisibilityOf(element), timeoutSeconds,
+                "invisible: " + element);
     }
 
     public static WebElement waitForElementPresent(By locator) {
-        LogUtils.info("[MobileUI] Waiting up to " + DEFAULT_TIMEOUT + "s (default) for element to be present in DOM: "
-                + locator);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(DEFAULT_TIMEOUT));
-        return wait.until(ExpectedConditions.presenceOfElementLocated(locator));
+        return waitForElementPresent(locator, DEFAULT_TIMEOUT);
     }
 
-    public static boolean waitForTextToBePresent(By locator, String text, int timeout) {
-        LogUtils.info("[MobileUI] Waiting up to " + timeout + "s for text '" + text + "' to be present in element: "
-                + locator);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(timeout));
-        return wait.until(ExpectedConditions.textToBePresentInElementLocated(locator, text));
+    public static WebElement waitForElementPresent(By locator, int timeoutSeconds) {
+        return waitFor(ExpectedConditions.presenceOfElementLocated(locator), timeoutSeconds,
+                "present: " + locator);
     }
 
     public static boolean waitForTextToBePresent(By locator, String text) {
-        LogUtils.info("[MobileUI] Waiting up to " + DEFAULT_TIMEOUT + "s (default) for text '" + text
-                + "' to be present in element: " + locator);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(DEFAULT_TIMEOUT));
-        return wait.until(ExpectedConditions.textToBePresentInElementLocated(locator, text));
+        return waitForTextToBePresent(locator, text, DEFAULT_TIMEOUT);
     }
 
-    public static boolean waitForTextToBePresent(WebElement element, String text, int timeout) {
-        LogUtils.info("[MobileUI] Waiting up to " + timeout + "s for text '" + text + "' to be present in element: "
-                + element);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(timeout));
-        return wait.until(ExpectedConditions.textToBePresentInElement(element, text));
+    public static boolean waitForTextToBePresent(By locator, String text, int timeoutSeconds) {
+        return waitFor(ExpectedConditions.textToBePresentInElementLocated(locator, text),
+                timeoutSeconds, "text '" + text + "' in " + locator);
     }
 
     public static boolean waitForTextToBePresent(WebElement element, String text) {
-        LogUtils.info("[MobileUI] Waiting up to " + DEFAULT_TIMEOUT + "s (default) for text '" + text
-                + "' to be present in element: " + element);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(DEFAULT_TIMEOUT));
-        return wait.until(ExpectedConditions.textToBePresentInElement(element, text));
+        return waitForTextToBePresent(element, text, DEFAULT_TIMEOUT);
     }
 
-    public static boolean waitForAttributeToBe(By locator, String attribute, String value, int timeout) {
-        LogUtils.info("[MobileUI] Waiting up to " + timeout + "s for attribute '" + attribute + "' to be '" + value
-                + "' in element: " + locator);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(timeout));
-        return wait.until(ExpectedConditions.attributeToBe(locator, attribute, value));
+    public static boolean waitForTextToBePresent(WebElement element, String text, int timeoutSeconds) {
+        return waitFor(ExpectedConditions.textToBePresentInElement(element, text),
+                timeoutSeconds, "text '" + text + "'");
     }
 
     public static boolean waitForAttributeToBe(By locator, String attribute, String value) {
-        LogUtils.info("[MobileUI] Waiting up to " + DEFAULT_TIMEOUT + "s (default) for attribute '" + attribute
-                + "' to be '" + value + "' in element: " + locator);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(DEFAULT_TIMEOUT));
-        return wait.until(ExpectedConditions.attributeToBe(locator, attribute, value));
+        return waitForAttributeToBe(locator, attribute, value, DEFAULT_TIMEOUT);
     }
 
-    public static boolean waitForAttributeToBe(WebElement element, String attribute, String value, int timeout) {
-        LogUtils.info("[MobileUI] Waiting up to " + timeout + "s for attribute '" + attribute + "' to be '" + value
-                + "' in element: " + element);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(timeout));
-        return wait.until(ExpectedConditions.attributeToBe(element, attribute, value));
+    public static boolean waitForAttributeToBe(By locator, String attribute, String value, int timeoutSeconds) {
+        return waitFor(ExpectedConditions.attributeToBe(locator, attribute, value),
+                timeoutSeconds, "attribute " + attribute + "='" + value + "'");
     }
 
     public static boolean waitForAttributeToBe(WebElement element, String attribute, String value) {
-        LogUtils.info("[MobileUI] Waiting up to " + DEFAULT_TIMEOUT + "s (default) for attribute '" + attribute
-                + "' to be '" + value + "' in element: " + element);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(DEFAULT_TIMEOUT));
-        return wait.until(ExpectedConditions.attributeToBe(element, attribute, value));
+        return waitForAttributeToBe(element, attribute, value, DEFAULT_TIMEOUT);
     }
 
-    public static List<WebElement> waitForNumberOfElements(By locator, int expectedCount, int timeout) {
-        LogUtils.info("[MobileUI] Waiting up to " + timeout + "s for number of elements to be " + expectedCount
-                + " for locator: " + locator);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(timeout));
-        return wait.until(ExpectedConditions.numberOfElementsToBe(locator, expectedCount));
+    public static boolean waitForAttributeToBe(WebElement element, String attribute, String value, int timeoutSeconds) {
+        return waitFor(ExpectedConditions.attributeToBe(element, attribute, value),
+                timeoutSeconds, "attribute " + attribute + "='" + value + "'");
     }
 
     public static List<WebElement> waitForNumberOfElements(By locator, int expectedCount) {
-        LogUtils.info("[MobileUI] Waiting up to " + DEFAULT_TIMEOUT + "s (default) for number of elements to be "
-                + expectedCount + " for locator: " + locator);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(DEFAULT_TIMEOUT));
-        return wait.until(ExpectedConditions.numberOfElementsToBe(locator, expectedCount));
+        return waitForNumberOfElements(locator, expectedCount, DEFAULT_TIMEOUT);
     }
 
-    public static boolean waitForUrlContains(String text, int timeout) {
-        LogUtils.info("[MobileUI] Waiting up to " + timeout + "s for URL to contain: '" + text + "'");
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(timeout));
-        return wait.until(ExpectedConditions.urlContains(text));
+    public static List<WebElement> waitForNumberOfElements(By locator, int expectedCount, int timeoutSeconds) {
+        return waitFor(ExpectedConditions.numberOfElementsToBe(locator, expectedCount),
+                timeoutSeconds, "count=" + expectedCount + " for " + locator);
     }
 
     public static boolean waitForUrlContains(String text) {
-        LogUtils.info("[MobileUI] Waiting up to " + DEFAULT_TIMEOUT + "s (default) for URL to contain: '" + text + "'");
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(DEFAULT_TIMEOUT));
-        return wait.until(ExpectedConditions.urlContains(text));
+        return waitForUrlContains(text, DEFAULT_TIMEOUT);
     }
 
-    public static boolean waitForNumberOfWindows(int expectedWindows, int timeout) {
-        LogUtils.info("[MobileUI] Waiting up to " + timeout + "s for number of windows to be: " + expectedWindows);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(timeout));
-        return wait.until(ExpectedConditions.numberOfWindowsToBe(expectedWindows));
+    public static boolean waitForUrlContains(String text, int timeoutSeconds) {
+        return waitFor(ExpectedConditions.urlContains(text), timeoutSeconds, "URL contains '" + text + "'");
     }
 
     public static boolean waitForNumberOfWindows(int expectedWindows) {
-        LogUtils.info("[MobileUI] Waiting up to " + DEFAULT_TIMEOUT + "s (default) for number of windows to be: "
-                + expectedWindows);
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(DEFAULT_TIMEOUT));
-        return wait.until(ExpectedConditions.numberOfWindowsToBe(expectedWindows));
+        return waitForNumberOfWindows(expectedWindows, DEFAULT_TIMEOUT);
+    }
+
+    public static boolean waitForNumberOfWindows(int expectedWindows, int timeoutSeconds) {
+        return waitFor(ExpectedConditions.numberOfWindowsToBe(expectedWindows),
+                timeoutSeconds, "windows=" + expectedWindows);
+    }
+
+    // ═══════════════════════ INTERNAL ═══════════════════════
+
+    private static <T> T waitFor(ExpectedCondition<T> condition, int timeoutSeconds, String description) {
+        log("Waiting up to " + timeoutSeconds + "s for " + description);
+        return new WebDriverWait(getDriver(), Duration.ofSeconds(timeoutSeconds)).until(condition);
+    }
+
+    private static void stepDelay() {
+        sleep(STEP_ACTION_TIMEOUT);
+    }
+
+    private static void log(String message) {
+        LogUtils.info(LOG_PREFIX + message);
+    }
+
+    private static Point centerOf(WebElement element) {
+        Point loc = element.getLocation();
+        Dimension size = element.getSize();
+        return new Point(loc.getX() + size.getWidth() / 2, loc.getY() + size.getHeight() / 2);
+    }
+
+    private static void performTap(int x, int y, int holdDurationMs) {
+        PointerInput finger = new PointerInput(PointerInput.Kind.TOUCH, "finger");
+        Sequence sequence = new Sequence(finger, 1)
+                .addAction(finger.createPointerMove(Duration.ZERO, PointerInput.Origin.viewport(), x, y))
+                .addAction(finger.createPointerDown(PointerInput.MouseButton.LEFT.asArg()))
+                .addAction(new Pause(finger, Duration.ofMillis(holdDurationMs)))
+                .addAction(finger.createPointerUp(PointerInput.MouseButton.LEFT.asArg()));
+        getDriver().perform(Collections.singletonList(sequence));
     }
 }
